--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text
-*.tff filter=lfs diff=lfs merge=lfs -text
+*.tif filter=lfs diff=lfs merge=lfs -text
 *.iso filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.rar filter=lfs diff=lfs merge=lfs -text
