--- a/webservice/BAEROFOTORAR/.gitattributes
+++ b/webservice/BAEROFOTORAR/.gitattributes
@@ -4,3 +4,23 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.rar filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+.nc filter=lfs diff=lfs merge=lfs -text
+.gif filter=lfs diff=lfs merge=lfs -text
+.bmp filter=lfs diff=lfs merge=lfs -text
+.pdf filter=lfs diff=lfs merge=lfs -text
+.docx filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/TUGX225[[:space:]]SD[[:space:]]frame[[:space:]]29.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/TUGX[[:space:]]929[[:space:]]SK[[:space:]]frame[[:space:]]108.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/TUGX[[:space:]]223[[:space:]]SD[[:space:]]\#143.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/* filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/GX[[:space:]]1314[[:space:]][[:space:]]\#16.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/GX[[:space:]]1314[[:space:]][[:space:]]\#56.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/GX[[:space:]]2316[[:space:]]SG[[:space:]]\#46.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/GX2207-L[[:space:]]SG[[:space:]]frame[[:space:]]87.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/GX2237[[:space:]]SG[[:space:]]frame[[:space:]]21.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/TUGX[[:space:]]223[[:space:]]SD[[:space:]]\#128.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/TUGX[[:space:]]223[[:space:]]SD[[:space:]]\#130.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/TUGX[[:space:]]223[[:space:]]SD[[:space:]]\#131.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/TUGX[[:space:]]223[[:space:]]SD[[:space:]]\#140.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/TUGX[[:space:]]223[[:space:]]SD[[:space:]]\#141.jpg filter=lfs diff=lfs merge=lfs -text
+webservice/BAEROFOTORAR/TUGX[[:space:]]223[[:space:]]SD[[:space:]]\#142.jpg filter=lfs diff=lfs merge=lfs -text
