--- a/webservice/BAEROFOTORAR/Z/.gitattributes
+++ b/webservice/BAEROFOTORAR/Z/.gitattributes
@@ -4,3 +4,8 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.rar filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+.nc filter=lfs diff=lfs merge=lfs -text
+.gif filter=lfs diff=lfs merge=lfs -text
+.bmp filter=lfs diff=lfs merge=lfs -text
+.pdf filter=lfs diff=lfs merge=lfs -text
+.docx filter=lfs diff=lfs merge=lfs -text
